docs: add npm metadata and comprehensive README
- Add version, description, author, and license to package.json
- Add keywords for npm discovery
- Add exports field for proper module resolution
- Update README with problem description, solution, and usage examples

--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
   "name": "markdown-fix",
+  "version": "0.1.0",
+  "description": "Fix Markdown emphasis formatting by inserting spaces around markers containing brackets and special characters",
+  "author": "koichi.yamamoto",
+  "license": "MIT",
   "module": "index.ts",
   "type": "module",
+  "main": "index.ts",
+  "exports": {
+    ".": {
+      "import": "./index.ts"
+    }
+  },
   "scripts": {
     "test": "bun test"
   },
+  "keywords": [
+    "markdown",
+    "emphasis",
+    "formatter",
+    "llm"
+  ],
   "devDependencies": {
     "@types/bun": "latest"
   },
