build: setup JavaScript build output for npm compatibility
- Update package.json to output dist/index.js instead of index.ts
- Add type definitions export from dist/index.d.ts
- Configure tsconfig.json to compile TypeScript to JavaScript (ES2020)
- Generate source maps and declaration files
- Add build script: "bunx tsc"
- Update files field to only include dist folder for npm

This fixes the "Missing module type" error in Next.js and other
bundlers that require proper module type configuration.

All 26 tests still passing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,17 +2,21 @@
   "compilerOptions": {
     // Environment setup & latest features
     "lib": ["ESNext"],
-    "target": "ESNext",
+    "target": "ES2020",
     "module": "ESNext",
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
 
+    // Output
+    "outDir": "./dist",
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+
     // Bundler mode
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    "moduleResolution": "node",
     "verbatimModuleSyntax": true,
-    "noEmit": true,
 
     // Best practices
     "strict": true,
@@ -24,5 +28,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "include": ["index.ts"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
