--- a/package.json
+++ b/package.json
@@ -4,16 +4,22 @@
   "description": "Fix Markdown emphasis formatting by inserting spaces around markers containing brackets and special characters",
   "author": "koichi.yamamoto",
   "license": "MIT",
-  "module": "index.ts",
   "type": "module",
-  "main": "index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./index.ts"
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
     }
   },
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "test": "bun test"
+    "test": "bun test",
+    "build": "bunx tsc"
   },
   "keywords": [
     "markdown",
