--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "markdown-fix",
+  "name": "fix-markdown",
   "version": "0.3.4",
   "description": "Fix Markdown emphasis formatting by inserting spaces around markers containing brackets and special characters",
   "author": "koichi.yamamoto",
