test: add marked parser validation for list structure
- Install marked and @types/marked as devDependencies
- Add parser validation tests to verify fixMarkdown output renders correctly
- Ensure nested lists and link-heavy list items are properly recognized
- Validate that no code blocks are incorrectly generated

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "llm"
   ],
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/marked": "^6.0.0",
+    "marked": "^16.4.1"
   },
   "peerDependencies": {
     "typescript": "^5"
